kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/guarded: "true"
    gatus.home-operations.com/endpoint: |
      group: Observability
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["prometheus.vaderrp.com"]
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
